Started working on annotation configs